--- a/index.html
+++ b/index.html
@@ -17,7 +17,34 @@
                 <option value="Rent">Rent</option>
                 <option value="Monthly data">Monthly data</option>
             </select>
-            
+            <label for="amount-input">Amount:</label>
+            <input type="number" id="amount-input">
+            <label for="date-input">Date</label>
+            <input type="date" id="date-input">
+            <button id="add-btn">Add</button>
+        </div>
+        <div class="expenses-section">
+            <h2>Expenses list</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Category</th>
+                        <th>Amount</th>
+                        <th>Date</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody id="expense-table-b">
+                    <tfoot>
+                        <tr>
+                            <td>Total:</td>
+                            <td id="total-amount"></td>
+                            <td>Date</td>
+                            <td>Delete</td>
+                        </tr>
+                    </tfoot>
+                </tbody>
+            </table>
         </div>
         
     </div>
