--- a/index.html
+++ b/index.html
@@ -2,51 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense tracker site</title>
     <link rel="stylesheet" href="style.css">
+    <title>Expense Tracker Site</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Expense tracker site</h1>
-        <div class="input-section">
-            <label for="category-select">Category:</label>
-            <select id="category-select">
-                <option value="food & toiletries">food & toiletries</option>
-                <option value="transport">Transport</option>
-                <option value="Rent">Rent</option>
-                <option value="Monthly data">Monthly data</option>
-            </select>
-            <label for="amount-input">Amount:</label>
-            <input type="number" id="amount-input">
-            <label for="date-input">Date</label>
-            <input type="date" id="date-input">
-            <button id="add-btn">Add</button>
-        </div>
-        <div class="expenses-section">
-            <h2>Expenses list</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Category</th>
-                        <th>Amount</th>
-                        <th>Date</th>
-                        <th>Delete</th>
-                    </tr>
-                </thead>
-                <tbody id="expense-table-b">
-                    <tfoot>
-                        <tr>
-                            <td>Total:</td>
-                            <td id="total-amount"></td>
-                            <td>Date</td>
-                            <td>Delete</td>
-                        </tr>
-                    </tfoot>
-                </tbody>
-            </table>
-        </div>
-        
+    <h1>Expense Tracker App</h1>
+    <div class="input-section">
+        <label for="category-select">Category:</label>
+        <select id="category-select">
+            <option value="Food & Beverage">Food & essentials</option>
+            <option value="Rent">Rent</option>
+            <option value="Transport">Transport</option>
+            <option value="Relaxing">Relaxing</option>
+        </select>
+        <label for="amount-input">Amount:</label>
+        <input type="number" id="amount-input">
+        <label for="date-input">Date:</label>
+        <input type="date" id="date-input">
+        <button id="add-btn">Add</button>
+    </div>
+    <div class="expenses-list">
+        <h2>Expenses List</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Amount</th>
+                    <th>Date</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody id="expnese-table-body">
+
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Total:</td>
+                    <td id="total-amount"></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tfoot>
+        </table>
     </div>
     <script src="app.js"></script>
 </body>
